--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
   <a href="{{ url_for('about')}}">About</a> | 
   <a href="{{ url_for('favorite_food') }}">Favorite Food</a> |
   <a href="{{ url_for('favorite_sport') }}">Favorite Sport</a> | 
+  <a href="{{ url_for('favorite_movie') }}">Favorite Movie</a> |
 
   {% block content %}{% endblock %}
   
